// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorModal matches snapshot 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.5rem;
  box-shadow: 0 0.2rem 0.4rem rgba(ui-color(black),0.2);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  overflow: initial;
  min-width: 12rem;
  font-size: 1.6rem;
  height: 4rem;
  padding: 0 3rem;
  color: #fff;
  background-color: #d4450c;
  font-weight: bold;
  border: none;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c1:hover {
  background-color: ,#be3c08,;
}

.c1:active {
  background-color: ,#b03808,;
}

.c1:focus {
  outline: solid #fff;
  box-shadow: inset 0 0 0 0.3rem #000;
}

.c0 {
  padding: 1.5rem 0;
}

<div
  className="modal-wrapper error-modal"
  style={
    Object {
      "--modal-z-index": 140,
    }
  }
>
  <div
    className="modal-card-wrapper"
  >
    <div
      className="modal-card"
      style={
        Object {
          "--link-color": "#027EB5",
          "--link-hover-color": "#0064A0",
          "--text-color": "#424242",
        }
      }
    >
      <header
        className="modal-header"
        style={
          Object {
            "--header-bg": "#f1f1f1",
            "--header-border": "#fafafa",
          }
        }
      >
        <h1
          className="modal-heading"
          style={
            Object {
              "--text-color": "#424242",
            }
          }
        >
          Error
        </h1>
        <button
          aria-label="Close modal"
          className="modal-close-icon"
          onClick={[Function]}
          style={
            Object {
              "--icon-color-base": "#5e6062",
              "--icon-color-lighter": "#c5c5c5",
            }
          }
          type="button"
        >
          <svg
            aria-hidden="true"
            height="15px"
            version="1.1"
            viewBox="0 0 15 15"
            width="15px"
          >
            <g
              fill="none"
              fillRule="evenodd"
              stroke="none"
              strokeWidth="1"
            >
              <g
                fill="currentColor"
                transform="translate(-302.000000, -18.000000)"
              >
                <g
                  transform="translate(302.000000, 18.000000)"
                >
                  <path
                    d="M7.5,5.41522791 L12.0331524,0.579865364 C12.3077536,0.286957429 12.7165503,0.24816296 12.946282,0.493210121 L13.9861449,1.60239723 C14.2158766,1.84744439 14.1795068,2.28349422 13.9049056,2.57640216 L9.37175324,7.41176471 L13.9049056,12.2471273 C14.1795068,12.5400352 14.2158766,12.976085 13.9861449,13.2211322 L12.946282,14.3303193 C12.7165503,14.5753665 12.3077536,14.536572 12.0331524,14.243664 L7.5,9.4083015 L2.96684761,14.243664 C2.69224642,14.536572 2.2834497,14.5753665 2.05371799,14.3303193 L1.01385508,13.2211322 C0.784123363,12.976085 0.820493178,12.5400352 1.09509437,12.2471273 L5.62824676,7.41176471 L1.09509437,2.57640216 C0.820493178,2.28349422 0.784123363,1.84744439 1.01385508,1.60239723 L2.05371799,0.493210121 C2.2834497,0.24816296 2.69224642,0.286957429 2.96684761,0.579865364 L7.5,5.41522791 Z"
                  />
                </g>
              </g>
            </g>
          </svg>
        </button>
      </header>
      <div
        className="modal-body "
      >
        <h3
          className="modal-body-heading "
          id="modal-title"
          style={
            Object {
              "--text-color": "#424242",
            }
          }
        >
          Uh-oh, there's been a glitch
        </h3>
        <div
          className="c0"
          dangerouslySetInnerHTML={
            Object {
              "__html": "
  We're not quite sure what went wrong. Restart your browser. If this doesn't solve
  the problem, visit our <a href=\\"https://help.openstax.org/s/\\" target=\\"_blank\\">Support Center</a>.
",
            }
          }
        />
      </div>
      <div
        className="modal-footer "
      >
        <button
          className="c1"
          data-testid="clear-error"
          onClick={[Function]}
        >
          OK
        </button>
      </div>
    </div>
  </div>
  <div
    className="modal-mask"
  />
</div>
`;

exports[`ErrorModal matches snapshots with recorded error ids 1`] = `
.c1 {
  color: #424242;
  font-size: 1.4rem;
  line-height: 1.6rem;
  font-weight: normal;
  font-size: 0.9rem;
  color: #424242;
  opacity: 0.6;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.5rem;
  box-shadow: 0 0.2rem 0.4rem rgba(ui-color(black),0.2);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  overflow: initial;
  min-width: 12rem;
  font-size: 1.6rem;
  height: 4rem;
  padding: 0 3rem;
  color: #fff;
  background-color: #d4450c;
  font-weight: bold;
  border: none;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c2:hover {
  background-color: ,#be3c08,;
}

.c2:active {
  background-color: ,#b03808,;
}

.c2:focus {
  outline: solid #fff;
  box-shadow: inset 0 0 0 0.3rem #000;
}

.c0 {
  padding: 1.5rem 0;
}

<div
  className="modal-wrapper error-modal"
  style={
    Object {
      "--modal-z-index": 140,
    }
  }
>
  <div
    className="modal-card-wrapper"
  >
    <div
      className="modal-card"
      style={
        Object {
          "--link-color": "#027EB5",
          "--link-hover-color": "#0064A0",
          "--text-color": "#424242",
        }
      }
    >
      <header
        className="modal-header"
        style={
          Object {
            "--header-bg": "#f1f1f1",
            "--header-border": "#fafafa",
          }
        }
      >
        <h1
          className="modal-heading"
          style={
            Object {
              "--text-color": "#424242",
            }
          }
        >
          Error
        </h1>
        <button
          aria-label="Close modal"
          className="modal-close-icon"
          onClick={[Function]}
          style={
            Object {
              "--icon-color-base": "#5e6062",
              "--icon-color-lighter": "#c5c5c5",
            }
          }
          type="button"
        >
          <svg
            aria-hidden="true"
            height="15px"
            version="1.1"
            viewBox="0 0 15 15"
            width="15px"
          >
            <g
              fill="none"
              fillRule="evenodd"
              stroke="none"
              strokeWidth="1"
            >
              <g
                fill="currentColor"
                transform="translate(-302.000000, -18.000000)"
              >
                <g
                  transform="translate(302.000000, 18.000000)"
                >
                  <path
                    d="M7.5,5.41522791 L12.0331524,0.579865364 C12.3077536,0.286957429 12.7165503,0.24816296 12.946282,0.493210121 L13.9861449,1.60239723 C14.2158766,1.84744439 14.1795068,2.28349422 13.9049056,2.57640216 L9.37175324,7.41176471 L13.9049056,12.2471273 C14.1795068,12.5400352 14.2158766,12.976085 13.9861449,13.2211322 L12.946282,14.3303193 C12.7165503,14.5753665 12.3077536,14.536572 12.0331524,14.243664 L7.5,9.4083015 L2.96684761,14.243664 C2.69224642,14.536572 2.2834497,14.5753665 2.05371799,14.3303193 L1.01385508,13.2211322 C0.784123363,12.976085 0.820493178,12.5400352 1.09509437,12.2471273 L5.62824676,7.41176471 L1.09509437,2.57640216 C0.820493178,2.28349422 0.784123363,1.84744439 1.01385508,1.60239723 L2.05371799,0.493210121 C2.2834497,0.24816296 2.69224642,0.286957429 2.96684761,0.579865364 L7.5,5.41522791 Z"
                  />
                </g>
              </g>
            </g>
          </svg>
        </button>
      </header>
      <div
        className="modal-body "
      >
        <h3
          className="modal-body-heading "
          id="modal-title"
          style={
            Object {
              "--text-color": "#424242",
            }
          }
        >
          Uh-oh, there's been a glitch
        </h3>
        <div
          className="c0"
          dangerouslySetInnerHTML={
            Object {
              "__html": "
  We're not quite sure what went wrong. Restart your browser. If this doesn't solve
  the problem, visit our <a href=\\"https://help.openstax.org/s/\\" target=\\"_blank\\">Support Center</a>.
",
            }
          }
        />
        <div
          className="c1"
        >
          some-error-id
        </div>
      </div>
      <div
        className="modal-footer "
      >
        <button
          className="c2"
          data-testid="clear-error"
          onClick={[Function]}
        >
          OK
        </button>
      </div>
    </div>
  </div>
  <div
    className="modal-mask"
  />
</div>
`;
